layout: hero section

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="section">
-      <div class="wrap">
+    <section class="section section--dark">
+      <div class="wrap hero__grid">
         <div class="hero">
           <div class="hero__headline">
             Toggl Track <span class="headline--highlight">extension</span> is
@@ -16,10 +16,6 @@
           </div>
           <div class="hero__byline">
             Get the power of Toggl Track anywhere from your browser
-          </div>
-          <div class="hightlight__span">
-            Follow this guide for a step-by-step explanation on how to set up
-            the Toggl Track extension
           </div>
         </div>
         <div class="right">
@@ -29,9 +25,13 @@
             pin it blue
           </div>
         </div>
+        <div class="notice">
+          Follow this guide for a step-by-step explanation on how to set up the
+          Toggl Track extension
+        </div>
       </div>
     </section>
-    <section class="section">
+    <section class="section section--light">
       <div class="wrap">
         <h1 class="section__heading">No more jumping between tools</h1>
         <div class="cards">
@@ -92,7 +92,7 @@
         </div>
       </div>
     </section>
-    <section class="section">
+    <section class="section section--dark">
       <div class="wrap">
         <h1 class="section__heading heading--light">
           Toggl Track is right where you need it to be
