hero section created

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="wrap hero__grid">
         <div class="hero">
           <div class="hero__headline">
-            Toggl Track <span class="headline--highlight">extension</span> is
-            installed
+            Toggl Track <span class="headline--highlight">extension</span
+            ><br />is installed
           </div>
           <div class="hero__byline">
             Get the power of Toggl Track anywhere from your browser
@@ -26,8 +26,8 @@
           </div>
         </div>
         <div class="notice">
-          Follow this guide for a step-by-step explanation on how to set up the
-          Toggl Track extension
+          Follow <a href="#">this guide</a> for a step-by-step explanation on
+          how to set up the Toggl Track extension
         </div>
       </div>
     </section>
