layout: card section added

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <!-- card 1 -->
           <div class="card">
             <div class="card__icon">
-              <img class="card__img" src="img/" alt="" />
+              <img class="card__img" src="img/card1.svg" alt="" />
             </div>
             <div class="card__heading">
               Embed the timer straight into the interface of your chosen web
@@ -52,7 +52,7 @@
           <!-- card 2 -->
           <div class="card">
             <div class="card__icon">
-              <img class="card__img" src="img/" alt="" />
+              <img class="card__img" src="img/card2.svg" alt="" />
             </div>
             <div class="card__heading">
               Improve your productivity with the Pomodoro timer
@@ -65,7 +65,7 @@
           <!-- card 3 -->
           <div class="card">
             <div class="card__icon">
-              <img class="card__img" src="img/" alt="" />
+              <img class="card__img" src="img/card3.svg" alt="" />
             </div>
             <div class="card__heading">
               Build your time tracking habit with the help of tracking reminders
@@ -78,7 +78,7 @@
           <!-- card 4 -->
           <div class="card">
             <div class="card__icon">
-              <img class="card__img" src="img/" alt="" />
+              <img class="card__img" src="img/card4.svg" alt="" />
             </div>
             <div class="card__heading">
               Use idle detection to stop the timer when you’re not using your
