--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <section class="section section--dark">
+    <section class="section section--dark section__hero">
       <div class="wrap hero__grid">
         <div class="hero">
           <div class="hero__headline">
