icon button added

--- a/index.html
+++ b/index.html
@@ -24,7 +24,18 @@
           </div>
         </div>
         <div class="right">
-          <div class="right__button">Toggl Track 📌</div>
+          <div class="right__button icon">
+            <div class="icon__icon">
+              <img class="icon__img" src="img/icon.png" alt="icon" />
+            </div>
+            <div class="icon__title">Toggl Track</div>
+            <div class="icon__pin">
+              <i class="fas fa-thumbtack"></i>
+            </div>
+            <div class="icon__puzzle">
+              <img class="puzzle__img" src="img/puzzle.svg" alt="puzzle" />
+            </div>
+          </div>
           <div class="right__byline">
             For easy access, select the puzzle icon next to the address bar and
             pin it blue
