extenion rotated text is done

--- a/index.html
+++ b/index.html
@@ -16,7 +16,17 @@
       <div class="wrap hero__grid">
         <div class="hero">
           <div class="hero__headline">
-            Toggl Track <span class="headline--highlight">extension</span
+            Toggl Track
+            <span class="headline--highlight">
+              <span>e</span>
+              <span>x</span>
+              <span>t</span>
+              <span>e</span>
+              <span>n</span>
+              <span>s</span>
+              <span>i</span>
+              <span>o</span>
+              <span>n</span></span
             ><br />is installed
           </div>
           <div class="hero__byline">
